update for debug

--- a/.github/workflows/on-proto-update.yml
+++ b/.github/workflows/on-proto-update.yml
@@ -77,8 +77,7 @@ jobs:
         run: chmod +x /tmp/script.py
       - name: add lines to file4.proto
         run: |
-          /tmp/script.py target/models/file4.proto tag2 > target/models/file4.proto.tmp
-          mv target/models/file4.proto.tmp target/models/file4.proto
+          /tmp/script.py target/models/file4.proto tag2
       - name: check file4.proto
         run: cat target/models/file4.proto
       # - name: check if we need to commit
