--- a/.github/workflows/on-proto-update.yml
+++ b/.github/workflows/on-proto-update.yml
@@ -74,12 +74,14 @@ jobs:
             file.close()
           EOF
       - name: make script executable
-        run: chmod +x /tmp/script.py
-      - name: add lines to file4.proto
         run: |
-          /tmp/script.py target/models/file4.proto tag2
-      - name: check file4.proto
-        run: cat target/models/file4.proto
+          chmod +x /tmp/script.py
+          cat /tmp/script.py
+      # - name: add lines to file4.proto
+      #   run: |
+      #     /tmp/script.py target/models/file4.proto tag2
+      # - name: check file4.proto
+      #   run: cat target/models/file4.proto
       # - name: check if we need to commit
       #   id: changed-files-specific
       #   uses: tj-actions/changed-files@v36
