--- a/.github/workflows/on-proto-update.yml
+++ b/.github/workflows/on-proto-update.yml
@@ -57,29 +57,30 @@ jobs:
         run: python -V
       - name: push script
         run: |
-        cat << EOF > /tmp/script.py
-          #!/usr/bin/env python3
-          import sys
-          file_name = sys.argv[1]
-          tag_string = sys.argv[2]
-          file = open(file_name, "r+")
-          while True:
-              line = file.readline()
-              line.strip()
-              if not line:
-                  break
-              if line.startswith(tag_string):
-                  line = line + "\n\nAddition line\n\n"
-              print(line, end="")
-          file.close()
-        EOF
+          cat << EOF > /tmp/script.py
+            #!/usr/bin/env python3
+            import sys
+            file_name = sys.argv[1]
+            tag_string = sys.argv[2]
+            file = open(file_name, "r+")
+            while True:
+                line = file.readline()
+                line.strip()
+                if not line:
+                    break
+                if line.startswith(tag_string):
+                    line = line + "\n\nAddition line\n\n"
+                print(line, end="")
+            file.close()
+          EOF
       - name: make script executable
         run: |
           chmod +x /tmp/script.py
           cat /tmp/script.py
-      # - name: add lines to file4.proto
-      #   run: |
-      #     /tmp/script.py target/models/file4.proto tag2
+       - name: add lines to file4.proto
+         run: |
+            cd ${{ env.FOLDER }} && \
+           /tmp/script.py target/models/file4.proto tag2
       # - name: check file4.proto
       #   run: cat target/models/file4.proto
       # - name: check if we need to commit
