--- a/.github/workflows/on-proto-update.yml
+++ b/.github/workflows/on-proto-update.yml
@@ -59,28 +59,19 @@ jobs:
         run: |
           cat << EOF > /tmp/script.py
             #!/usr/bin/env python3
-            import sys
-            file_name = sys.argv[1]
-            tag_string = sys.argv[2]
-            file = open(file_name, "r+")
-            while True:
-                line = file.readline()
-                line.strip()
-                if not line:
-                    break
-                if line.startswith(tag_string):
-                    line = line + "\n\nAddition line\n\n"
-                print(line, end="")
-            file.close()
+            print("hello world")
           EOF
       - name: make script executable
         run: |
           chmod +x /tmp/script.py
           cat /tmp/script.py
-      - name: add lines to file4.proto
+      - name: run script
         run: |
-          cd ${{ env.FOLDER }} && \
-          /tmp/script.py target/models/file4.proto tag2
+          /tmp/script.py
+      # - name: add lines to file4.proto
+      #   run: |
+      #     cd ${{ env.FOLDER }} && \
+      #     /tmp/script.py target/models/file4.proto tag2
       # - name: check file4.proto
       #   run: cat target/models/file4.proto
       # - name: check if we need to commit
