--- a/.github/workflows/on-proto-update.yml
+++ b/.github/workflows/on-proto-update.yml
@@ -78,14 +78,10 @@ jobs:
         run: |
           chmod +x /tmp/script.py
           cat /tmp/script.py
-      # - name: run script
-      #   run: |
-      #     python /tmp/script.py
-
-      # - name: add lines to file4.proto
-      #   run: |
-      #     cd ${{ env.FOLDER }} && \
-      #     /tmp/script.py target/models/file4.proto tag2
+      - name: add lines to file4.proto
+        run: |
+          cd ${{ env.FOLDER }} && \
+          python /tmp/script.py target/models/file4.proto tag2
       # - name: check file4.proto
       #   run: cat target/models/file4.proto
       # - name: check if we need to commit
