--- a/.github/workflows/on-proto-update.yml
+++ b/.github/workflows/on-proto-update.yml
@@ -81,7 +81,9 @@ jobs:
       - name: add lines to file4.proto
         run: |
           cd ${{ env.FOLDER }} && \
-          python /tmp/script.py target/models/file4.proto tag2
+          for i in *; do
+            python /tmp/script.py $(basename "$") tag2
+          done
       # - name: check file4.proto
       #   run: cat target/models/file4.proto
       # - name: check if we need to commit
