--- a/.github/workflows/on-proto-update.yml
+++ b/.github/workflows/on-proto-update.yml
@@ -55,6 +55,7 @@ jobs:
            cp -Rv ../../../source/dir/public/ target/public
       - name: directory structure after copy
         run: |
+          cd ${{ env.FOLDER }} && \
           pwd && ls -la && cd target && ls -la && pwd
       - name: push script
         run: |
