--- a/.github/workflows/on-proto-update.yml
+++ b/.github/workflows/on-proto-update.yml
@@ -102,7 +102,7 @@ jobs:
       - name: make PR
         run: |
           cd ${{ env.FOLDER }}
-          echo ${{ secrets.GITHUB_TOKEN }} | gh auth login --with-token
+          echo ${{ secrets.GH_TOKEN }} | gh auth login --with-token
           gh pr create \
             --body "" \
             --title "update proto to ${{ env.LATEST_TAG }}" \
