--- a/.github/workflows/on-proto-update.yml
+++ b/.github/workflows/on-proto-update.yml
@@ -1,13 +1,13 @@
 on:
-  push:
-    branches:
-      - main
-    paths:
-      - 'source/dir/models/file4.proto'
-      - 'source/dir/public/file.proto'
-      - 'source/dir/public/file3.proto'
-    tags-ignore:
-      - "**"
+#   push:
+#     branches:
+#       - main
+#     paths:
+#       - 'source/dir/models/file4.proto'
+#       - 'source/dir/public/file.proto'
+#       - 'source/dir/public/file3.proto'
+#     tags-ignore:
+#       - "**"
 
 name: on-commit-to-main
 env:
