--- a/.github/workflows/on-proto-update.yml
+++ b/.github/workflows/on-proto-update.yml
@@ -5,7 +5,7 @@ on:
         description: 'Repository to sync'
         required: true
 
-name: syncronize
+name: on-proto-update
 env:
   REPOSITORY: "ssh2003/target-for-sync"
 jobs:
