--- a/.github/workflows/on-push-proto.yaml
+++ b/.github/workflows/on-push-proto.yaml
@@ -14,8 +14,8 @@ jobs:
   sync-first-repo:
     uses: ssh2003/source-for-sync/.github/workflows/on-proto-update.yaml@main
     with:
-      repo: ssh2003/target-for-sync
+      repo: "ssh2003/target-for-sync"
   sync-second-repo:
     uses: ssh2003/source-for-sync/.github/workflows/on-proto-update.yaml@main
     with:
-      repo: ssh2003/second-target-for-sync
+      repo: "ssh2003/second-target-for-sync"
