--- a/.github/workflows/on-push-proto.yaml
+++ b/.github/workflows/on-push-proto.yaml
@@ -12,10 +12,10 @@ on:
 name: proto-sync
 jobs:
   sync-first-repo:
-    uses: ssh2003/source-for-sync/.github/workflows/on-proto-update.yaml@main
+    uses: ssh2003/source-for-sync/.github/workflows/on-proto-update.yml@main
     with:
       repo: "ssh2003/target-for-sync"
   sync-second-repo:
-    uses: ssh2003/source-for-sync/.github/workflows/on-proto-update.yaml@main
+    uses: ssh2003/source-for-sync/.github/workflows/on-proto-update.yml@main
     with:
       repo: "ssh2003/second-target-for-sync"
