--- a/.github/workflows/on-proto-update.yml
+++ b/.github/workflows/on-proto-update.yml
@@ -7,6 +7,7 @@ on:
       repo:
         description: Repository to sync
         required: true
+        type: string
 
 jobs:
   send-pull-requests:
