--- a/.github/workflows/on-proto-update.yml
+++ b/.github/workflows/on-proto-update.yml
@@ -67,6 +67,7 @@ jobs:
           EOF
       - name: add lines to files in model dir
         run: |
+          pwd && \
           cd ${{ env.FOLDER }}/target/models/ && \
           for i in *; do
             echo $i
@@ -75,6 +76,7 @@ jobs:
           done
       - name: add lines to files in public dir
         run: |
+          pwd && \
           cd ${{ env.FOLDER }}/target/public/ && \
           for i in *; do
             echo $i
@@ -83,6 +85,7 @@ jobs:
           done
       - name: add line to file without tag2
         run: |
+          pwd && \
           cd ${{ env.FOLDER }}/target/public/ && \
           python /tmp/script.py file3.proto tag1 > file3.proto.tmp && \
           mv file3.proto.tmp file3.proto
