--- a/.github/workflows/on-proto-update.yml
+++ b/.github/workflows/on-proto-update.yml
@@ -41,8 +41,10 @@ jobs:
       - name: copy all files from source repo
         run: |
           cd ${{ env.FOLDER }}
-          cp -Rv ../../../source/dir/models/ target/models
-          cp -Rv ../../../source/dir/public/ target/public
+          pwd
+          ls -la
+          cp -Rv ../../../source/dir/models/ target/models/
+          cp -Rv ../../../source/dir/public/ target/public/
       - name: directory structure after copy
         run: |
           cd ${{ env.FOLDER }} && \
