--- a/.github/workflows/on-proto-update.yml
+++ b/.github/workflows/on-proto-update.yml
@@ -38,80 +38,24 @@ jobs:
           cd ${{ env.FOLDER }}
           # Create a new feature branch for the changes.
           git checkout -b ${{ env.BRANCH_NAME }}
-      - name: copy all files from source repo
-        run: |
-          cd ${{ env.FOLDER }} && \
-          pwd && \
-          ls -la && \
-          cp -Rv ../../../source/dir/models/ target/models/ && \
-          cp -Rv ../../../source/dir/public/ target/public/ 
-      - name: directory structure after copy
-        run: |
-          cd ${{ env.FOLDER }} && \
-          pwd && ls -la && cd target && ls -la && pwd
-      - name: push script
-        run: |
-          cat << EOF > /tmp/script.py
-          #!/usr/bin/env python3
-          import sys
-          file_name = sys.argv[1]
-          tag_string = sys.argv[2]
-          file = open(file_name, "r+")
-          while True:
-            line = file.readline()
-            line.strip()
-            if not line:
-              break
-            if line.startswith(tag_string):
-              line = line + "\n\nAddition line\n\n"
-            print(line, end="")
-          file.close()
-          EOF
-      - name: where
-        run: |
-          pwd && ls -la && ls -la bin && ls -ls bin/ssh2003/target-for-sync/ && \
-          ls -ls bin/ssh2003/target-for-sync/target/
-      - name: add lines to files in model dir
-        run: |
-          pwd && \
-          cd ${{ env.FOLDER }}/target/models/ && \
-          for i in *; do
-            echo $i
-            python /tmp/script.py "$i" tag2 > ${i}.tmp
-            mv ${i}.tmp ${i}
-          done
-      - name: add lines to files in public dir
-        run: |
-          pwd && \
-          cd ${{ env.FOLDER }}/target/public/ && \
-          for i in *; do
-            echo $i
-            python /tmp/script.py "$i" tag2 > ${i}.tmp
-            mv ${i}.tmp ${i}
-          done
-      - name: add line to file without tag2
-        run: |
-          pwd && \
-          cd ${{ env.FOLDER }}/target/public/ && \
-          python /tmp/script.py file3.proto tag1 > file3.proto.tmp && \
-          mv file3.proto.tmp file3.proto
-      - name: Run commit
-        run: |
-          cd ${{ env.FOLDER }}
-          # set commiter identity
-          git config user.email "serhii.khylyk@gmail.com"
-          git config user.name "Serhii Khylyk"
-          # Commit the changes and push the feature branch to origin
-          git add .
-          git commit -m "update proto to ${{ env.LATEST_TAG }}"
-          git push origin ${{ env.BRANCH_NAME }}
-      - name: make PR
-        run: |
-          cd ${{ env.FOLDER }}
-          echo ${{ secrets.GH_TOKEN }} | gh auth login --with-token
-          gh pr create \
-            --body "" \
-            --title "update proto to ${{ env.LATEST_TAG }}" \
-            --head "${{ env.BRANCH_NAME }}" \
-            --base "main" \
-            --assignee "ssh2003"
+
+      # - name: Run commit
+      #   run: |
+      #     cd ${{ env.FOLDER }}
+      #     # set commiter identity
+      #     git config user.email "serhii.khylyk@gmail.com"
+      #     git config user.name "Serhii Khylyk"
+      #     # Commit the changes and push the feature branch to origin
+      #     git add .
+      #     git commit -m "update proto to ${{ env.LATEST_TAG }}"
+      #     git push origin ${{ env.BRANCH_NAME }}
+      # - name: make PR
+      #   run: |
+      #     cd ${{ env.FOLDER }}
+      #     echo ${{ secrets.GH_TOKEN }} | gh auth login --with-token
+      #     gh pr create \
+      #       --body "" \
+      #       --title "update proto to ${{ env.LATEST_TAG }}" \
+      #       --head "${{ env.BRANCH_NAME }}" \
+      #       --base "main" \
+      #       --assignee "ssh2003"
