--- a/.github/workflows/on-proto-update.yml
+++ b/.github/workflows/on-proto-update.yml
@@ -36,6 +36,7 @@ jobs:
       - name: create new branch
         run: |
           cd ${{ env.FOLDER }}
+          pwd
           # Create a new feature branch for the changes.
           git checkout -b ${{ env.BRANCH_NAME }}
 
