--- a/.github/workflows/on-proto-update.yml
+++ b/.github/workflows/on-proto-update.yml
@@ -36,7 +36,7 @@ jobs:
       - name: create new branch
         run: |
           cd ${{ env.FOLDER }}
-          pwd && ls -la
+          pwd && ls -la && ls -la source 
           # Create a new feature branch for the changes.
           git checkout -b ${{ env.BRANCH_NAME }}
 
