--- a/.github/workflows/on-proto-update.yml
+++ b/.github/workflows/on-proto-update.yml
@@ -30,7 +30,7 @@ jobs:
       - name: clone target repo
         uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c
         with:
-          repository: ${{ inputs.go_version }}
+          repository: ${{ inputs.repo }}
           path: ${{ env.FOLDER }}
           token: ${{ secrets.GH_TOKEN }}
       - name: create new branch
