--- a/.github/workflows/on-proto-update.yml
+++ b/.github/workflows/on-proto-update.yml
@@ -65,6 +65,12 @@ jobs:
         run: |
           cd ${{ env.FOLDER }}
           git diff
+       - name: Get all changed .js file(s) or any file in the static folder excluding the docs folder
+        id: changed-files-excluded
+        uses: tj-actions/changed-files@v36
+        with:
+          files: |
+            **.proto
 
 
       # - name: Run commit
